Did some tweaks in project titles

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <projects>
         <div class="titles">Projects</div>
         <p style="margin-top: 1%;">
-            <div2 class="subtitle">Movies Database Website | Open Soft | General Championship 2024 | IIT Kharagpur</div2>
+            <div2 class="subtitle">Movies Streaming & Database Website | Open Soft | General Championship 2024 | IIT Kharagpur</div2>
             <div3 class="subtitle-date">[Mar'24 - Apr'24]</div3>
             <ul style="margin-top: -1.1%;">
                 <li>Developed the frontend using ReactJS, HTML5, and CSS-tailwind, enhancing user interface with intuitive navigation and responsive design</li>
@@ -159,7 +159,7 @@
             </ul>
         </p>
         <p>
-            <div2 class="subtitle">Movies Database Website | Open Soft | General Championship 2024 | IIT Kharagpur</div2>
+            <div2 class="subtitle">Automatic Temperature and Humidity Controller | Term Project | IIT Kharagpur</div2>
             <div3 class="subtitle-date">[Mar'24 - Apr'24]</div3>
             <ul style="margin-top: -1.1%;">
                 <div4 style="margin-left: -2%;"><i>Under the supervision of Prof. Subhadip Dey and Prof Brajesh Kumar Panda, developed an Arduino-based project</i></div4>
